[gd_scene load_steps=3 format=3 uid="uid://cnlooayf8u5iw"]

[ext_resource type="Script" uid="uid://bk6ij6alss6bd" path="res://addons/raconteur/editor/editor.gd" id="1_nijns"]
[ext_resource type="PackedScene" uid="uid://dv8g4pi6bocge" path="res://scenario_graph_edit.tscn" id="2_nijns"]

[node name="RaconteurEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nijns")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScenarioGraphEdit" parent="VSplitContainer/HSplitContainer/MarginContainer" instance=ExtResource("2_nijns")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VSplitContainer/HSplitContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/HSplitContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="SaveFile" type="Button" parent="VSplitContainer/HSplitContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Save file"

[node name="NewFile" type="Button" parent="VSplitContainer/HSplitContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "New file"

[node name="OpenFile" type="Button" parent="VSplitContainer/HSplitContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Open file"

[node name="NewScenarioButton" type="Button" parent="VSplitContainer/HSplitContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "New scenario"

[node name="LoadScenarioButton" type="Button" parent="VSplitContainer/HSplitContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Load scenario"

[node name="PlaybackPanel" type="PanelContainer" parent="VSplitContainer/HSplitContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer/HSplitContainer/PlaybackPanel"]
layout_mode = 2

[node name="Play" type="Button" parent="VSplitContainer/HSplitContainer/PlaybackPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Play"

[node name="BottomDrawer" type="PanelContainer" parent="VSplitContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer/BottomDrawer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VSplitContainer/BottomDrawer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/BottomDrawer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Tabs" type="VBoxContainer" parent="VSplitContainer/BottomDrawer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Schema" type="Button" parent="VSplitContainer/BottomDrawer/VBoxContainer/MarginContainer/HBoxContainer/Tabs"]
layout_mode = 2
text = "Schema"

[node name="Scenarios" type="Button" parent="VSplitContainer/BottomDrawer/VBoxContainer/MarginContainer/HBoxContainer/Tabs"]
layout_mode = 2
text = "Scenarios"

[node name="World" type="Button" parent="VSplitContainer/BottomDrawer/VBoxContainer/MarginContainer/HBoxContainer/Tabs"]
layout_mode = 2
text = "Test world"

[node name="VSeparator" type="VSeparator" parent="VSplitContainer/BottomDrawer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SchemaEditor" type="MarginContainer" parent="VSplitContainer/BottomDrawer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScenarioEditor" type="MarginContainer" parent="VSplitContainer/BottomDrawer/VBoxContainer/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="WorldEditor" type="MarginContainer" parent="VSplitContainer/BottomDrawer/VBoxContainer/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="VSplitContainer/HSplitContainer/MarginContainer/MarginContainer/HBoxContainer/SaveFile" to="." method="_on_save_file_pressed"]
[connection signal="pressed" from="VSplitContainer/HSplitContainer/MarginContainer/MarginContainer/HBoxContainer/NewFile" to="." method="_on_new_file_pressed"]
[connection signal="pressed" from="VSplitContainer/HSplitContainer/MarginContainer/MarginContainer/HBoxContainer/OpenFile" to="." method="_on_open_file_pressed"]
[connection signal="pressed" from="VSplitContainer/HSplitContainer/MarginContainer/MarginContainer/HBoxContainer/NewScenarioButton" to="." method="_on_new_scenario_button_pressed"]
